# comfyui-workflow-prettier

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
web/: workflow_prettier.js
web/js/: workflow_prettier.js
